<resources>
    <string name="app_name">Mixed Activities</string>
    <!--  Click Counter  -->
    <string name="click_counter_text">Click Counter</string>
    <string name="click_btn_text">Click</string>
    <string name="activities_text">Other Activities</string>
    <string name="lemonade_app_btn">Lemonade App</string>
    <string name="dice_activity_btn">Dice Roller</string>
    <string name="birthday_activity_btn">Birthday Card</string>
    <string name="tip_calculator_activity_btn">Tip Calculator</string>
    <!--  Birthday App  -->
    <string name="birthday_text">Happy Birthday, Harold!</string>
    <string name="signature_text">From your secret friend.</string>
    <!--  Dice Roller App  -->
    <string name="dice_roller_btn">Roll</string>
    <string name="dice_description">6 side dice</string>
    <!-- Lemonade App -->
    <string name="lemon_select">Click to select a lemon!</string>
    <string name="lemon_squeeze">Click to juice the lemon!</string>
    <string name="lemon_drink">Click to drink your lemonade!</string>
    <string name="lemon_empty_glass">Click to start again!</string>
    <string name="squeeze_count">Squeeze count: %1$d, keep squeezing!</string>
    <string name="lemon_tree_description">3 lemoned tree</string>
    <!-- Calculator App -->
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="eighteen_percent">Good (18%)</string>
    <string name="fifteen_percent">OK (15%)</string>
    <string name="round_up_switch">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="squeezes_left">You still have 3 squeezes left</string>
    <!-- Unit Converter -->
    <string name="cook_conv_activity_btn">Unit Converter</string>
    <string name="amount_grams"># of grams</string>
    <string name="convert_grams_to_cups">Convert Grams to Cups</string>
    <string name="equal">=</string>
    <string name="conversion_cups">0 cups</string>
    <string name="convert_milliliters_to_ounces">Convert Milliliters to Fluid Ounces</string>
    <string name="amount_milliliters"># of milliliters</string>
    <string name="conversion_fluid_ounces">0 fluid ounces</string>
</resources>